--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 20-August-2018 - New version of plugin version
 23-August-2018 - Validate installation, use Plugin.getHome()
+09-September-2018 - Add a pip modules files
